--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<h1 class="text-3xl underline">
-  Hello world
-</h1>
+<p-tabMenu [model]="items"/>
+<div class="p-4">
+  <router-outlet></router-outlet>
+</div>
 
 
+<p-toast />
